# haskell-performance

./: Effects.hs  FlatMaybe.hs  LambdaReduce.hs  haskell-performance.cabal  stack.yaml
LambdaReduce/: Bloom.hs  FrontEnd.hs  Frontend.hs  Hereditary.hs  LambdaReduce.hs  Main.hs  NBE.hs  UState.hs
