name:                haskell-performance
version:             0.1.0.0
synopsis:            Miscellaneous benchmarks
homepage:            http://github.com/githubuser/haskell-performance#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          puttamalac@gmail.com
copyright:           2016 András Kovács
build-type:          Simple
cabal-version:       >=1.10

executable flat-maybe
  hs-source-dirs:      .
  main-is:             FlatMaybe.hs
  ghc-options:         -rtsopts -O2 -fllvm

  build-depends:       base
                     , criterion
                     , ghc-prim >= 0.4.0.0

  default-language:    Haskell2010

executable effects
  hs-source-dirs:      .
  main-is:             Effects.hs
  ghc-options:         -rtsopts -O2 -fllvm

  build-depends:       base
                     , criterion
                     , freer == 0.2.2.4
                     , ghc-prim >= 0.4.0.0
                     , mtl >= 2.2.1
                     , lens

executable lambda-reduce
  hs-source-dirs:      .
  main-is:             LambdaReduce.hs
  ghc-options:         -rtsopts -O2 -fllvm

  build-depends:       base
                     , criterion
                     , ghc-prim >= 0.4.0.0
                     , bound
                     , megaparsec
                     , containers
                     , unordered-containers
                     , prelude-extras

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AndrasKovacs/haskell-performance
